--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     password: root
-    url: jdbc:mysql://localhost:3306/fornecedor?useTimezone=true&setTimezone=UTC
+    url: jdbc:mysql://localhost:3306/fornecedor
     username: root
   jpa:
     hibernate:
