--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     password: root
-    url: jdbc:mysql://localhost:3306/fornecedor
+    url: jdbc:mysql://localhost:3306/fornecedor?useTimezone=true&setTimezone=UTC
     username: root
   jpa:
     hibernate:
